add reCAPTCHA verification to user registration and login processes